[package]
name = "atm-async-utils"
version = "0.1.2"
authors = ["AljoschaMeyer <mail@aljoscha-meyer.de>"]
description = "Utilities for implementing and testing futures::Sink and futures::Stream related code."
readme = "README.md"
license = "AGPL-3.0"
repository = "https://github.com/AljoschaMeyer/atm-async-utils"

[dependencies]
futures-core = "0.2.0-alpha"
futures-sink = "0.2.0-alpha"
futures-channel = "0.2.0-alpha"
quickcheck = "0.6.1"
